--- a/01. Primeros pasos del desarrollo frontend/03. Proyecto final integrador/CSS/styles.css
+++ b/01. Primeros pasos del desarrollo frontend/03. Proyecto final integrador/CSS/styles.css
@@ -30,10 +30,10 @@ body {
 h1 {
     position: absolute;
     left: 35%;
-    top: 40%;
+    top: 25%;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 65px;
+    font-size: 105px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
@@ -50,13 +50,9 @@ h3 {
     padding-top: 15px;
 }
 
-#primerH3 {
-    padding-top: 0;
-}
-
 .izquierda {
     background-color: white;
-    height: 1356px;
+    max-height: 100%;
     width: 35%;
 }
 
@@ -88,3 +84,12 @@ p,ul {
 .icon {
     width: 21px;
 }
+
+#listaDatosPersonales {
+        list-style: none;
+        padding-right: 50px;
+}
+
+.hidden {
+    display: none;
+  }
